# lyrical

./: .flake8  .gitignore  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
src/lyrical/: __init__.py  analyses.py  console.py  musicbrainz.py  ovh.py
tests/: conftest.py  test_analyses.py  test_console.py  test_musicbrainz.py
tests/mocks/: search_response.json
