[tool.poetry]
name = "lyrical"
version = "0.1.0"
description = "A lyrics corpus analysis tool"
authors = ["Josh Finch <me@joshfinch.com>"]
license = "LICENSE.md"
readme = "README.md"
homepage = "https://github.com/openfinch/lyrical"
repository = "https://github.com/openfinch/lyrical"
keywords = ["analysis", "music", "cli"]

[tool.poetry.scripts]
lyrical = "lyrical.console:main"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.1"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
coverage = {extras = ["toml"], version = "^5.0.4"}
pytest-cov = "^2.8.1"
pytest-mock = "^3.0.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["lyrical"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

