[tool.poetry]
name = "lyrical"
version = "0.1.0"
description = "A lyrics corpus analysis tool"
authors = ["Josh Finch <me@joshfinch.com>"]
license = "LICENSE.md"
readme = "README.md"
homepage = "https://github.com/openfinch/lyrical"
repository = "https://github.com/openfinch/lyrical"
keywords = ["analysis", "music", "cli"]

[tool.poetry.scripts]
lyrical = "lyrical.console:main"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.1"
requests = "^2.23.0"
desert = "^2020.1.6"
marshmallow = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
coverage = {extras = ["toml"], version = "^5.0.4"}
pytest-cov = "^2.8.1"
pytest-mock = "^3.0.0"
black = "^19.10b0"
flake8 = "^3.7.9"
flake8-bandit = "^2.1.2"
flake8-black = "^0.1.1"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
safety = "^1.8.7"
mypy = "^0.770"
typeguard = "^2.7.1"
flake8-annotations = "^2.0.1"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["lyrical"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
